# BimAtlas

./: .gitignore  AGENTS.md  LICENSE  README.md  opencode.json
.github/: PULL_REQUEST_TEMPLATE_validation_schema.md
.opencode/: active_state.md  database-schema.md  overview.md
apps/api/: .env.test  cleanup_test_db.sh  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_tests.sh  setup_test_db.sh  teardown_test_db.sh
apps/api/schema/: ifc_4_3_schema.json
apps/api/scripts/: check_filter_tree_integrity.py  generate_ifc_4_3_schema.py  migrate_filter_sets_to_tree.py
apps/api/src/: config.py  db.py  main.py
apps/api/src/schema/: filter_operators.py  filter_tree.py  ifc_enums.py  ifc_schema_loader.py  ifc_types.py  mesh_types.py  queries.py  scalars.py
apps/api/src/services/agent/: __init__.py  api_spec.py  events.py  live_streams.py  llm_factory.py  mcp_tools.py  pricing.py  sandbox.py  sandbox_tools.py  skills.py  workflow.py
apps/api/src/services/graph/: age_client.py  queries.py
apps/api/src/services/ifc/: geometry.py  ingestion.py
apps/api/src/services/mcp/: tools.py
apps/api/src/services/validation/: engine.py
apps/api/tests/: README.md  __init__.py  conftest.py  test_agent_api_sandbox.py  test_agent_workflow_prompt.py  test_api.py  test_app_views.py  test_db.py  test_delete_operations.py  test_filter_sets.py  test_filter_tree.py  test_geometry.py  test_ifc_schema_loader.py  test_ifc_skills.py  test_ingestion.py  test_mcp_tools.py  test_sandbox_manager.py  test_setup.py  test_sheet_templates.py  test_validation.py
infra/: docker-compose.yml  (+2 more)
(+162 files in other folders)
