[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bimatlas-api"
version = "0.1.0"
description = "BimAtlas -- FastAPI + Strawberry GraphQL backend for IFC spatial-graph engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "strawberry-graphql[fastapi]",
    "ifcopenshell",
    "psycopg2-binary",
    "apache-age-python",
    "numpy",
    "python-multipart",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
